Testing new branch

--- a/README
+++ b/README
@@ -1,10 +1,10 @@
-This is a development project started by Adhip Gupta.
-It is a kernel which is aimed to be a full fledged operating system.
-The code should contain a reference to Adhip Gupta wherever it is used.
-The repository is a property of Adhip Gupta.
-Contact Information
+*This is a development project started by Adhip Gupta.
+*It is a kernel which is aimed to be a full fledged operating system.
+*The code should contain a reference to Adhip Gupta wherever it is used.
+*The repository is a property of Adhip Gupta.
 
-Adhip Gupta
-www.adhipgupta.com
-adhip@adhipgupta.com
-+91-9900514542
+*Contact Information
+*Adhip Gupta
+*www.adhipgupta.com
+*adhip@adhipgupta.com
+*+91-9900514542
